# JniFuzzerFramework

./: LICENSE  README.md
FlaskWebApp/: README.md  apk_tags.py  database_tools.py  server.py  setup.py  start_production.sh
FlaskWebApp/certificates/: README.md
FlaskWebApp/flask_server/: app.py  config.py  database.py  init_downloads.sh  utils.py
FlaskWebApp/flask_server/models/: apks.py  signatures.py  users.py  workers.py
FlaskWebApp/flask_server/views/: apks.py  rendering.py  signatures.py  users.py  workers.py
FlaskWebApp/react_application/: .gitignore  frontend_prod_server.js  manifest.json  package-lock.json  package.json
FlaskWebApp/react_application/public/: index.html
FlaskWebApp/react_application/src/: App.js  function_utils.js  index.js  login.html
FlaskWebApp/react_application/src/components/: About.js  ApkFlows.js  ApkLibs.js  ApkList.js  ApkNotes.js  ApkResult.js  ApkSummary.js  ApkTable.js  ApkTags.js  Apks.js  Dashboard.js  FlowViz.js  FuzzDialog.js  Jobs.js  Login.js  LoginForm.js  NotFound.js  Register.js  RegisterForm.js  SPAFrame.js  SearchBar.js  Sidebar.js  Test.js  TopBarTagFilters.js  Topbar.js  TopbarJobNotification.js  TopbarUserInfo.js
FlaskWebApp/react_application/src/css/: search-bar.css  taint-saviour.css
emulator/: install_emulator.sh
fuzzme_framework/: CMakeLists.txt  README.md
fuzzme_framework/include/: fuzzer.h  logging.h
fuzzme_framework/include/executor/: executor.h
fuzzme_framework/include/executor/plugins/: simple_executor.h
fuzzme_framework/include/extractor/: jni_extractor.h
fuzzme_framework/include/libutils/: libutils.h
fuzzme_framework/include/mocks/: function_ptrs.h  jnienv_mokcs.h  jvm_mocks.h
fuzzme_framework/include/mocks/type_mocks/: jni_type_mocks.h
fuzzme_framework/include/signature_parser/: signature_lexer.h  signature_parser.h  signature_parser.h.bak
fuzzme_framework/include/signature_parser/soot_parser/: soot_lexer.h  soot_parser.h
fuzzme_framework/src/: fuzzer.cpp  main.cpp
fuzzme_framework/src/executor/: executor.cpp
fuzzme_framework/src/executor/plugins/: simple_executor.cpp
fuzzme_framework/src/extractor/: jni_dynamic_extractor.cpp  jni_extractor.cpp  jni_static_extractor.cpp
fuzzme_framework/src/libutils/: libutils.cpp
fuzzme_framework/src/mocks/: function_prt.sh  function_ptr.cpp  jnienv_mocks.cpp  jvm_mocks.cpp
fuzzme_framework/src/mocks/type_mocks/: jstring_mock.cpp  type_mocks_utils.cpp
fuzzme_framework/src/signature_parser/soot_parser/: soot_lexer.cpp  soot_parser.cpp
fuzzme_framework/tests/: CMakeLists.txt  CMakeLists.txt.in  test_dynamic_extractor.cpp  test_extractor.cpp  test_libutils.cpp  test_static_extractor.cpp
fuzzme_framework/tests/extractor_test_files/: GetNameFromSignature_names.txt  GetNameFromSignature_signatures.txt  signature_map_name.txt
fuzzme_framework/tests/signature_parser/: test_soot_parser.cpp
fuzzme_framework/tests/soot_parser_test_files/: signatures.txt
worker/: analysis.py  config.py  model_generator.py  seeds_generator.py  worker.py  worker_timeout.py
worker/android/: adb_wrapper.py  emulator.py
worker/jni_extractor/: extractors.py  jni_utils.py  method_abstraction.py
worker/jni_extractor/exceptions/: extractor_exceptions.py
